<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>Jobs</groupId>
	<artifactId>jobs</artifactId>
	<version>4.17.0</version>
	<name>Jobs</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.destroystokyo.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.16.5-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.ow2.asm</groupId>
					<artifactId>asm-commons</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.code.findbugs</groupId>
					<artifactId>jsr305</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.googlecode.json-simple</groupId>
					<artifactId>json-simple</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.ow2.asm</groupId>
					<artifactId>asm</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- McMMO -->
		<dependency>
			<groupId>com.gmail.nossr50.mcMMO</groupId>
			<artifactId>mcMMO</artifactId>
			<version>2.1.175-SNAPSHOT</version>
			<scope>system</scope>
			<systemPath>${basedir}/libs/mcMMO-2.1.175-SNAPSHOT.jar</systemPath>
		</dependency>
		<!-- Vault -->
		<dependency>
			<groupId>net.milkbowl.vault</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>craftbukkit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- MythicMobs -->
		<dependency>
			<groupId>io.lumine.xikage</groupId>
			<artifactId>MythicMobs</artifactId>
			<version>4.9.1</version>
			<scope>provided</scope>
		</dependency>
		<!-- WorldGuard old version -->
		<dependency>
			<groupId>com.sk89q</groupId>
			<artifactId>worldguard</artifactId>
			<version>6.1</version>
			<exclusions>
				<exclusion>
					<groupId>com.sk89q</groupId>
					<artifactId>commandbook</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sk89q.spigot</groupId>
					<artifactId>bukkit-classloader-check</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- WorldGuard new version -->
		<dependency>
			<groupId>com.sk89q.worldguard</groupId>
			<artifactId>worldguard-bukkit</artifactId>
			<version>7.0.2-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<artifactId>bukkit</artifactId>
					<groupId>org.bukkit</groupId>
				</exclusion>
				<exclusion>
					<artifactId>bukkit-classloader-check</artifactId>
					<groupId>org.sk89q.bukkit</groupId>
				</exclusion>
				<exclusion>
					<groupId>com.sk89q</groupId>
					<artifactId>commandbook</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bstats</groupId>
					<artifactId>bstats-bukkit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.papermc</groupId>
					<artifactId>paperlib</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- WorldEdit -->
		<dependency>
			<groupId>com.sk89q.worldedit</groupId>
			<artifactId>worldedit-bukkit</artifactId>
			<version>7.1.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<artifactId>bukkit-classloader-check</artifactId>
					<groupId>org.sk89q.bukkit</groupId>
				</exclusion>
				<exclusion>
					<groupId>org.bstats</groupId>
					<artifactId>bstats-bukkit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.papermc</groupId>
					<artifactId>paperlib</artifactId>
				</exclusion>
				<exclusion>
					<groupId>
						com.sk89q.worldedit.worldedit-libs
					</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.java.truevfs</groupId>
					<artifactId>
						truevfs-profile-default_2.13
					</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-slf4j-impl</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- PlaceholderAPI -->
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.10.9</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>me.rayzr522</groupId>
					<artifactId>jsonmessage</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.jetbrains</groupId>
					<artifactId>annotations</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- WildStacker -->
		<dependency>
			<groupId>com.bgsoftware</groupId>
			<artifactId>WildStackerAPI</artifactId>
			<version>latest</version>
			<scope>system</scope>
			<systemPath>${basedir}/libs/WildStackerAPI-latest.jar</systemPath>
		</dependency>
		<!-- AnimatedScoreboard -->
		<dependency>
			<groupId>me.jasperjh</groupId>
			<artifactId>AnimatedScoreboard</artifactId>
			<version>0.2.3</version>
			<scope>system</scope>
			<systemPath>${basedir}/libs/AnimatedScoreboard-0.2.3.jar</systemPath>
		</dependency>
		<!-- StackMob -->
		<dependency>
			<groupId>com.github.Nathat23</groupId>
			<artifactId>StackMob</artifactId>
			<version>5.4.2</version>
			<scope>system</scope>
			<systemPath>${basedir}/libs/StackMob-5.4.2.jar</systemPath>
		</dependency>
		<!-- MyPet -->
		<dependency>
			<groupId>de.keyle</groupId>
			<artifactId>mypet</artifactId>
			<version>3.10</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<repositories>
		<!-- Vault -->
		<repository>
			<id>vault-repo</id>
			<url>http://nexus.hc.to/content/repositories/pub_releases/</url>
		</repository>
		<!-- MythicMobs -->
		<repository>
			<id>nexus</id>
			<name>Lumine Releases</name>
			<url>https://mvn.lumine.io/repository/maven-public/</url>
		</repository>
		<!-- WorldGuard & WorldEdit -->
		<repository>
			<id>sk89q-repo</id>
			<url>http://maven.sk89q.com/repo/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<!-- papermc -->
		<repository>
			<id>papermc</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
		<!-- PlaceholderAPI -->
		<repository>
			<id>placeholderapi</id>
			<url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<!-- MyPet -->
		<repository>
			<id>mypet-repo</id>
			<url>http://repo.keyle.de/</url>
		</repository>
	</repositories>
	<!-- Builds Plugin -->
	<build>
		<defaultGoal>clean package</defaultGoal>
		<finalName>Jobs${project.version}</finalName>
		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
		<resources>
			<resource>
				<targetPath>.</targetPath>
				<directory>${basedir}/src/main/resources/</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<!-- Make a Jar -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
<!-- 			<plugin> -->
<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
<!-- 				<artifactId>maven-jar-plugin</artifactId> -->
<!-- 				<version>2.3.1</version> -->
<!-- 				<configuration> -->
<!-- 					<outputDirectory>C:\Users\Arte\Desktop\Server 1.16\plugins\</outputDirectory> -->
<!-- 				</configuration> -->
<!-- 			</plugin> -->
		</plugins>
	</build>
</project>
